Add header (navbar) component.

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-  <header id="page-header" class="page-header"></header>
+  <header id="nav-container"></header>
 
   <main id="main-content"></main>
 
   <!-- load our scripts after the rest of the DOM gets loaded -->
-  <script src="vendor/jquery-3.0.0.min.js"></script>
+  <script src="vendor/jquery-3.0.0.js"></script>
   <script src="scripts/users.js"></script>
+  <script src="components/header.js"></script>
 </body>
 
 </html>
