--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <script src="vendor/jquery-3.0.0.js"></script>
   <script src="scripts/users.js"></script>
   <script src="components/header.js"></script>
+  <script src="components/home.js"></script>
 </body>
 
 </html>
