--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,14 @@
 
   <!-- load our scripts after the rest of the DOM gets loaded -->
   <script src="vendor/jquery-3.0.0.js"></script>
+  <script src="libraries/views_manager.js"></script>
   <script src="scripts/users.js"></script>
+
   <script src="components/header.js"></script>
   <script src="components/categories.js"></script>
   <script src="components/items.js"></script>
+  <script src="components/newItemPanel.js"></script>
+  <script src="components/itemActions.js"></script>
 </body>
 
 </html>
