--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
   <script src="components/items.js"></script>
   <script src="components/newItemPanel.js"></script>
   <script src="components/itemActions.js"></script>
+  <script src="components/assignCategory.js"></script>
 </body>
 
 </html>
