--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
   <!-- load our scripts after the rest of the DOM gets loaded -->
   <script src="vendor/jquery-3.0.0.js"></script>
+  <script src="libraries/network.js"></script>
   <script src="libraries/views_manager.js"></script>
   <script src="scripts/users.js"></script>
 
