--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/main.css">
 
   <title>ListGenius</title>
@@ -29,6 +28,7 @@
 
   <script src="components/header.js"></script>
   <script src="components/home.js"></script>
+  <script src="components/profile.js"></script>
   <script src="components/newItemButton.js"></script>
   <script src="components/categories.js"></script>
   <script src="components/items.js"></script>
