--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
   <script src="components/home.js"></script>
   <script src="components/profile.js"></script>
   <script src="components/newItemButton.js"></script>
+  <script src="components/newItemPanel.js"></script>
   <script src="components/categories.js"></script>
   <script src="components/items.js"></script>
   <script src="components/newItemPanel.js"></script>
