--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/categories.css">
   <link rel="stylesheet" href="styles/items.css">
-  <link rel="stylesheet" href="styles/new-item-button.css">
+  <link rel="stylesheet" href="styles/buttons.css">
   <link rel="stylesheet" href="styles/newItemPanel.css">
   <link rel="stylesheet" href="styles/change-category.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
